# hello-sdl

./: CMakeLists.txt  haha.rocket
hello-sdl/: CMakeLists.txt  cleanup.h  hello-sdl.cpp  hello-sdl.h
